view and edit added

--- a/projectadh/templates/userdashboard.html
+++ b/projectadh/templates/userdashboard.html
@@ -4,6 +4,6 @@
     {{ msg }}<br><br>
     <a href="{% url 'newapplication'%}">New Application</a><br><br>
     <a href="{% url 'viewapplication'%}">View Application</a><br><br>
-    <a href="{% url 'modifyapplication'%}">Modify Application</a><br><br>
+    <a href="{% url 'editview' %}">Modify Application</a><br><br>
     </body>
 </html>
