--- a/projectadh/templates/editview.html
+++ b/projectadh/templates/editview.html
@@ -30,6 +30,9 @@
             <td><a href="{%url 'editapp' i.id%}">Edit</a></td>                
         </tr>      
         {%endfor%}
-        </table>   
+        </table>
+        <center>  
+        {{msg}} 
+        </center>
     </body>
 </html>
