--- a/projectadh/templates/userdashboard.html
+++ b/projectadh/templates/userdashboard.html
@@ -5,5 +5,7 @@
     <a href="{% url 'newapplication'%}">New Application</a><br><br>
     <a href="{% url 'viewapplication'%}">View Application</a><br><br>
     <a href="{% url 'editview' %}">Modify Application</a><br><br>
-    </body>
+    <a href="{% url 'quicklinks'%}">Important Links</a><br><br>
+    <a href="{% url 'logout'%}">Logout</a>
+</body>
 </html>
