--- a/projectadh/templates/userdashboard.html
+++ b/projectadh/templates/userdashboard.html
@@ -1,11 +1,145 @@
-<html>
-    <head></head>
-    <body>
-    {{ msg }}<br><br>
-    <a href="{% url 'newapplication'%}">New Application</a><br><br>
-    <a href="{% url 'viewapplication'%}">View Application</a><br><br>
-    <a href="{% url 'editview' %}">Modify Application</a><br><br>
-    <a href="{% url 'quicklinks'%}">Important Links</a><br><br>
-    <a href="{% url 'logout'%}">Logout</a>
+{%load static%}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dashboard</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: beige;
+            font-family: ui-rounded;
+            margin: 0;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+        .navbar {
+            background-color: white; /* Dark background for the navbar */
+        }
+        .navbar .logout {
+            color: blue;
+            font-size: 16px;
+            padding: 5px 16px;
+            text-decoration: none;
+            background-color: white;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .navbar .logout:hover {
+            background-color: beige;
+        }
+        .container {
+            max-width: 100%%; /* Control the width of the container */
+            margin-top: 50px; /* Add space below the navbar */
+        }
+        .message {
+            font-size: 30px;
+            font-weight: bold;
+            color: black;
+            margin-bottom: 30px;
+            text-align: center; /* Center the message text */
+        }
+        .tile-button {
+            padding: 70px;
+            font-size: 25px; /* Increase the font size */
+            color: #ffffff;
+            text-decoration: none;
+            border-radius: 10px;
+            margin-bottom: 0px;
+            transition: transform 0.2s ease-in-out;
+            display: block;
+        }
+        .tile-button:hover {
+            transform: scale(1.05);
+        }
+        .new-application {
+            background-color: #007bff;
+        }
+        .view-application {
+            background-color: grey;
+        }
+        .modify-application {
+            background-color: olive;
+        }
+        .important-links {
+            background-color: #17a2b8;
+        }
+        .package{
+            margin: 15px;
+            box-shadow: 5px 5px 5px grey;
+            background-color: white; 
+        }
+        .imgnew{
+            width:90%;
+            margin-left: 13px;
+            margin-right: 0px;
+            margin-top: 13px;
+            margin-bottom:1px;
+            
+        }
+        
+        .place{
+            width:90%;
+            padding:10px;
+            margin-left: 14px;
+            margin-right: 0px;
+            margin-top : 10px;
+        }
+        
+        .navbar-brand{
+            width:10px;
+        }
+
+    </style>
+</head>
+<body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand">
+                <img src="{% static 'images/logo.jpeg' %}" height="40"> 
+            </a>
+            <div class="ml-auto">
+                <a href="{% url 'logout' %}" class="logout">Logout</a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Main Content -->
+    <div class="container">
+        <div class="message">Welcome Admin</div>
+        <div  style="display: flex; justify-content:center;">
+            <div class="package">
+                <img src="{% static 'images/newapp.jpeg' %}"  class="imgnew">
+                <h3 class="place"><a href="{% url 'newapplication' %}" class="tile-button new-application">New Application</a></h3>
+            </div>
+        
+            <div class="package">
+                <img src="{% static 'images/viewapp.png' %}" class="imgnew">
+                <h3 class="place"><a href="{% url 'viewapplication' %}" class="tile-button view-application">View Application</a></h3>
+            </div>
+
+            <div class="package">
+                <img src="{% static 'images/newapp.jpeg' %}" class="imgnew">
+                <h3 class="place"><a href="{% url 'editview' %}" class="tile-button modify-application">Modify Application</a></h3>
+            </div>
+
+            <div class="package">
+                <img src="{% static 'images/links.png' %}" class="imgnew">
+                <h3 class="place"> <a href="{% url 'quicklinks' %}" class="tile-button important-links">Important Links</a></h3>
+            </div>
+        
+        
+        
+       
+    </div>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
